test: add unit tests for DTOs, events, validators, and value objects
Add comprehensive unit tests to improve test coverage from 76.31% to 77.01%:

- BulkEntryDtoTest: 20 tests covering constructor, helpers, validation
- ExportQueryDtoTest: 25 tests covering fromRequest, type conversions
- ProjectSaveDtoTest: 8 tests covering constructor and fromRequest
- EntryEventTest: 4 tests covering event constants and methods
- JsonResponseTest: 10 tests covering constructor and send()
- CustomerTeamsRequiredValidatorTest: 6 tests covering validation logic
- PaginatedEntryCollectionTest: 16 tests covering pagination methods

Enhanced existing tests:
- AccessDeniedSubscriberTest: +9 JSON response tests for path/header detection
- NrArrayTranslatorTest: +7 edge case tests for invalid JSON handling
- BaseTest: +4 tests for missing getter, entity/enum conversion, snake_case
- TimeCalculationServiceTest: +1 readableToFullMinutes test

Updated phpunit.xml.dist to include tests/Event, tests/Validator, and
tests/ValueObject directories in the unit test suite.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -30,6 +30,7 @@
         <!-- Pure unit tests - no database, no kernel, fast -->
         <testsuite name="unit">
             <directory>tests/Dto</directory>
+            <directory>tests/Event</directory>
             <directory>tests/EventSubscriber</directory>
             <directory>tests/Extension</directory>
             <directory>tests/Helper</directory>
@@ -37,6 +38,8 @@
             <directory>tests/Response</directory>
             <directory>tests/Service</directory>
             <directory>tests/Util</directory>
+            <directory>tests/Validator</directory>
+            <directory>tests/ValueObject</directory>
             <!-- Exclude integration tests that require external services -->
             <exclude>tests/Service/Ldap/LdapClientServiceIntegrationTest.php</exclude>
             <!-- Entity unit tests (not *DatabaseTest) -->
