test: add unit tests to achieve 80% coverage target
- Add tests for Jira DTOs (JiraIssue, JiraIssueFields, JiraIssueType,
  JiraStatus, JiraAssignee, JiraSubtask, JiraWorkLog, JiraSearchResult,
  JiraProject, JiraTransition)
- Add tests for AdminSyncDto, DatabaseResultDto, TicketSystemSaveDto
- Add tests for RequestHelper utility class
- Add tests for JiraApiInvalidResourceException and
  JiraApiUnauthorizedException
- Update phpunit.xml.dist to include tests/DTO/Jira directory

Coverage improved from 77.01% to 80.07%

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -30,6 +30,7 @@
         <!-- Pure unit tests - no database, no kernel, fast -->
         <testsuite name="unit">
             <directory>tests/Dto</directory>
+            <directory>tests/DTO/Jira</directory>
             <directory>tests/Event</directory>
             <directory>tests/EventSubscriber</directory>
             <directory>tests/Extension</directory>
