test: add unit tests to achieve 80% coverage target
- Add tests for TicketSystem entity (all getter/setter methods)
- Add tests for UniqueCustomerNameValidator, UniqueUsernameValidator,
  UniqueUserAbbrValidator, UniqueTeamNameValidator,
  UniqueActivityNameValidator, UniqueTicketSystemNameValidator,
  and UniqueProjectNameForCustomerValidator
- Add tests for InterpretationFiltersDto conversion methods
- Expand EntryRepository tests with edge cases
- Add BackedEnum test case to LdapAuthenticator parsePort tests

Coverage improved from 79.32% to 80.62%

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -54,6 +54,7 @@
             <file>tests/Entity/TicketTest.php</file>
             <file>tests/Entity/UserTest.php</file>
             <file>tests/Entity/UserTicketsystemTest.php</file>
+            <file>tests/Entity/TicketSystemTest.php</file>
             <!-- Enum unit tests -->
             <directory>tests/Enum</directory>
             <!-- Exception unit tests -->
